@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Cross-platform safemode (ignores uqm.cfg, bug #946) - Michael
 - Correct Chmmr response when asking about Sa-Matra (bug #1073) - Alex
 - Refactored universe generation - SvdB
 - Comm animation processing rewrite, bugs fixed - Alex
